crates/wasm-tui/tests/snapshots/snapshot__known_package_detail_view_snapshot.snap
---
source: crates/wasm-tui/tests/snapshot.rs
expression: output
---
ghcr.io/user/example-package

────────────────────────────────────────────────────────────────────────────────
Registry: ghcr.io
Repository: user/example-package
Description: An example WASM component package

Tags: 3 tag(s)
  • v1.0.0
  • v0.9.0
  • latest

Signature Tags: 1 tag(s)
  • v1.0.0.sig

Attestation Tags: 1 tag(s)
  • v1.0.0.att

Last Seen: 2024-01-15T10:30:00Z
 Esc  Back
