crates/wasm-tui/tests/snapshots/snapshot__log_view_with_lines_snapshot.snap
---
source: crates/wasm-tui/tests/snapshot.rs
expression: output
---
                                  3 log line(s)
2024-01-15T10:30:00Z WARN wasm: connection timeout
2024-01-15T10:30:01Z WARN wasm: retrying request
2024-01-15T10:30:05Z WARN wasm: registry unreachable





                     ↑/↓ scroll • G jump to bottom • q quit
