crates/wasm-tui/tests/snapshots/snapshot__package_detail_view_snapshot.snap
---
source: crates/wasm-tui/tests/snapshot.rs
expression: output
---
ghcr.io/bytecode-alliance/wasmtime

────────────────────────────────────────────────────────────────────────────────
Registry: ghcr.io
Repository: bytecode-alliance/wasmtime
Tag: v1.0.0
Digest: sha256:abc123def456789
Size: 5.00 MB

Manifest:
  Schema Version: 2
  Media Type: application/vnd.docker.distribution.manifest.v2+json
  Config Media Type: application/vnd.oci.image.config.v1+json
  Config Size: 100 B

Layers: 1 layer(s)
  [1] application/wasm (1.00 KB)







 Esc  Back
