crates/wasm-tui/tests/snapshots/snapshot__packages_view_with_filter_active_snapshot.snap
---
source: crates/wasm-tui/tests/snapshot.rs
expression: output
---
┌ Filter ──────────────────────────────────────────────────────────────────────────────────────────┐
│wasi_                                                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
                               No packages found matching your filter.










 /  Filter   p  Pull   d  Delete   Enter  View details   Esc  Clear
