crates/wasm-tui/tests/snapshots/snapshot__search_view_with_packages_snapshot.snap
---
source: crates/wasm-tui/tests/snapshot.rs
expression: output
---
┌ Search ──────────────────────────────────────────────────────────────────────────────────────────┐
│Press / to search...                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Repository                       Registry                  Tags                 Last Seen
bytecode-alliance/wasi-http      ghcr.io                   v0.2.0, v0.1.0       2024-01-15
user/my-component                ghcr.io                   latest               2024-02-01








 /  Search   p  Pull selected   r  Refresh tags   Enter  View details   Esc  Clear
