crates/wasm-tui/tests/snapshots/snapshot__tab_bar_third_selected_snapshot.snap
---
source: crates/wasm-tui/tests/snapshot.rs
expression: output
---
┌ Test App - ready ────────────────────────────────────────┐
│ First [1] │ Second [2] │ Third [3]                       │
└──────────────────────────────────────────────────────────┘
